--- a/html/login.html
+++ b/html/login.html
@@ -24,7 +24,7 @@
         <label for="password">Contraseña</label>
         <input type="password"  placeholder="Ingrese su contraseña" maxlength="15" id="pas"><span class="iconEyes"><i class="fa-solid fa-eye-slash"></i></span>
         <input type="submit" value="Ingresar">
-        <a href="./indexRegister.html">Crear una cuenta</a>
+        <a href="./registro.html">Crear una cuenta</a>
       </form>
     </div>
   </section>
