--- a/index.html
+++ b/index.html
@@ -13,7 +13,30 @@
 </head>
 <body>
   <header>
-
+  <nav class="navbar navbar-expand-lg p-3 bg-black">
+    <div class="container-fluid  d-flex">
+      <a class="navbar-brand" href="#"><img src="./img/logoNasaDos1.png" width="150px" alt=""></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav ">
+          <li class="nav-item mt-5 mt-lg-0">
+            <a class="navbar-brand navbtn textoNav active" aria-current="page" href="./indexPaginaDos.html">Explora Marte</a>
+          </li>
+          <li class="nav-item mt-5 mt-lg-0">
+            <a class="navbar-brand navbtnDos textoNav active" aria-current="page" href="./indexFavorito.html">Mis Favorito</a>
+          </li>
+          <li class="nav-item mt-5 mt-lg-0">
+            <a class="navbar-brand navbtnTres textoNav active" aria-current="page" href="./indexFavorito.html">Contactos</a>
+          </li>
+          <li class="nav-item mt-5 mt-lg-0 pb-1">
+            <a class="navbar-brand navbtnCuatro textoNav active" aria-current="page" id="cerrar" href="./indexLogin.html">Cerrar Sesión</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   </header>
   <main>
     <section>
