--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav ">
           <li class="nav-item mt-5 mt-lg-0">
-            <a class="navbar-brand navbtn textoNav active" aria-current="page" href="./indexPaginaDos.html">Explora Marte</a>
+            <a class="navbar-brand navbtn textoNav active" aria-current="page" href="/html/cardMarte.html">Explora Marte</a>
           </li>
           <li class="nav-item mt-5 mt-lg-0">
-            <a class="navbar-brand navbtnDos textoNav active" aria-current="page" href="./indexFavorito.html">Mis Favorito</a>
+            <a class="navbar-brand navbtnDos textoNav active" aria-current="page" href="#">Mis Favorito</a>
           </li>
           <li class="nav-item mt-5 mt-lg-0">
-            <a class="navbar-brand navbtnTres textoNav active" aria-current="page" href="./indexFavorito.html">Contactos</a>
+            <a class="navbar-brand navbtnTres textoNav active" aria-current="page" href="#">Contactos</a>
           </li>
           <li class="nav-item mt-5 mt-lg-0 pb-1">
-            <a class="navbar-brand navbtnCuatro textoNav active" aria-current="page" id="cerrar" href="./indexLogin.html">Cerrar Sesión</a>
+            <a class="navbar-brand navbtnCuatro textoNav active" aria-current="page" id="cerrar" href="./html/login.html">Cerrar Sesión</a>
           </li>
         </ul>
       </div>
@@ -62,7 +62,7 @@
         <div class="card mb-3" id="card">
           <div class="row g-0">
             <div class="col-lg-7">
-              <img src="./img/space.jpg" class="cardImg img-fluid rounded-start" alt="space">
+              <img src="/img/space.jpg" class="cardImg img-fluid rounded-start" alt="space">
             </div>
             <div class="col-lg-5">
               
