--- a/index.html
+++ b/index.html
@@ -106,7 +106,68 @@
     </section>
   </main>
   <footer>
-
+    <Section>
+      <div class="container-fluid bg-black">
+        <div class="row">
+          <div class="col-md-3 col-lg-2">
+            <img class="logoNasaFooter" src="/img/logoNasa.png" alt="nasa">
+          </div>
+          <div class="col-md-3 col-lg-2 mt-2">
+            <div>
+              <h3 class="tituloFooter">Siguenos</h3>
+            </div>
+            <div class="row">
+              <div class="col-1 col-md-2 col-lg-2">
+                <a href="https://github.com/nasa/nasa.github.io/blob/master/docs/INSTRUCTIONS.md"><img class="socialUno"
+                    src="/img/git.png" alt="github"></a>
+              </div>
+              <div class="col-1  col-md-2 col-lg-2">
+                <a href="https://www.instagram.com/nasaearth/"><img class="socialDos" src="/img/instagram.png" alt="instagram"></a>
+              </div>
+              <div class="col-1 col-md-2 col-lg-2">
+                <a href="https://www.facebook.com/nasaearth?mibextid=ZbWKwL"><img class="socialTres" src="/img/facebook.png"
+                    alt="facebook"></a>
+              </div>
+              <div class="col-1 col-md-2 col-lg-2">
+                <a href="https://twitter.com/NASAEarth?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img
+                    class="socialCuatro" src="/img/twitter.png" alt="twitter"></a>
+              </div>
+              <div class="col-1 col-md-2 col-lg-2">
+                <a href="https://www.linkedin.com/company/nasa/"><img class="socialCinco" src="/img/linkedin.png" alt="linkedin"></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 col-lg-2 mt-2">
+            <h3 class="tituloFooter">Aplicación</h3>
+            <div class="col-lg-12">
+              <a href="https://play.google.com/store/apps/details?id=gov.nasa"><img class="play" src="/img/googlePlay.png"alt="googlePlay"></a>
+          </div>
+        </div>
+        <div class="col-12 col-md-3 col-lg-3 mt-2">
+          <h3 class="tituloFooter">Oficina de información</h3>
+              <div class="row">
+                <div class="col-12 col-md-12 col-lg-12">
+                  <img class="socialSeis" src="/img/Gmail.png" alt="Gmail">
+                  <a class="mail" href=mailto:nasa-data@lists.arc.nasa.gov>nasa-data@lists.arc.nasa.gov</a>
+                </div>
+              </div>
+        </div>
+        <div class="col-12 col-lg-3 mt-2">
+          <h3 class="tituloFooter">Nosotros</h3>
+              <div class="row">
+                <div class=" col-md-12 col-lg-12">
+                  <img class="socialSiete" src="/img/coffee.png" alt="Gmail">
+                  <a class="nosotros" href="#">Equipo Cafe y Práctica</a>
+                </div>
+              </div>
+        </div>
+        <div class="col-lg-12">
+          <div class="col-md-12 col-lg-12 text-center">
+            <h6 class="tituloCopy">&copy;Copyright - 2023</h6>
+          </div>
+        </div>
+      </div>
+    </Section>
   </footer>
   <script src="./app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
