--- a/html/cardMarte.html
+++ b/html/cardMarte.html
@@ -22,7 +22,7 @@
             <a class="navbar-brand navbtn textoNav active" aria-current="page" href="/index.html">Regresar</a>
           </li>
           <li class="nav-item mt-5 mt-lg-0">
-            <a class="navbar-brand navbtnDos textoNav active" aria-current="page" href="#">Mis Favorito</a>
+            <a class="navbar-brand navbtnDos textoNav active" aria-current="page" href="/html/tierra.html">la Tierra</a>
           </li>
           <li class="nav-item mt-5 mt-lg-0">
             <a class="navbar-brand navbtnTres textoNav active" aria-current="page" href="#">Contactos</a>
