--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
             <a class="navbar-brand navbtnDos textoNav active" aria-current="page" href="/html/tierra.html">La Tierra</a>
           </li>
           <li class="nav-item mt-5 mt-lg-0">
-            <a class="navbar-brand navbtnTres textoNav active" aria-current="page" href="#">Contactos</a>
+            <a class="navbar-brand navbtnTres textoNav active" aria-current="page" href="/html/contacto.html">Contactos</a>
+          </li>
+          <li class="nav-item mt-5 mt-lg-0 pb-1">
+            <a class="navbar-brand navbtncinco textoNav active" aria-current="page" href="#">Acerca de Nosotros</a>
           </li>
           <li class="nav-item mt-5 mt-lg-0 pb-1">
             <a class="navbar-brand navbtnCuatro textoNav active" aria-current="page" id="cerrar" href="./html/login.html">Cerrar Sesión</a>
