--- a/html/contacto.html
+++ b/html/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/contacto.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <title>Document</title>
+    <link rel="shortcut icon" href="/img/logoNasa.png" type="image/x-icon">
+    <title>Contacto</title>
 </head>
 <body>
     <header>
@@ -29,9 +30,6 @@
                 <a class="navbar-brand navbtnTres textoNav active" aria-current="page" href="/html/contacto.html">Contactos</a>
               </li>
               <li class="nav-item mt-5 mt-lg-0 pb-1">
-                <a class="navbar-brand navbtncinco textoNav active" aria-current="page" href="#">Acerca de Nosotros</a>
-              </li>
-              <li class="nav-item mt-5 mt-lg-0 pb-1">
                 <a class="navbar-brand navbtnCuatro textoNav active" aria-current="page" id="cerrar" href="./html/login.html">Cerrar Sesión</a>
               </li>
             </ul>
@@ -41,7 +39,7 @@
         
     </header>
     <main>
-      <h1 class="titulo animate__animated animate__bounce colorh1">Contactos</h1>
+      <h1 class="titulo animate__animated animate__bounce colorh1 text-black fw-bold">Contactos</h1>
         <section>
             <div class="card-group">
                 <div class="card cardcss">
@@ -66,7 +64,7 @@
                   </div>
                 </div>
                 <div class="card cardcss">
-                  <img src="/img/col2.jpg" class="card-img-top foto" alt="...">
+                  <img src="/img/col2.jpg" class="card-img-top foto" width="100px" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Colaborador</h5>
                     <div class="col-md-3 col-lg-2 mt-2">
@@ -139,6 +137,70 @@
            </form>   
         </section>
     </main>
+    <footer>
+      <Section>
+        <div class="container-fluid bg-black">
+          <div class="row">
+            <div class="col-md-2 col-lg-2">
+              <img class="logoNasaFooter" src="/img/logoNasa.png" alt="nasa">
+            </div>
+            <div class="col-md-3 col-lg-2 mt-2">
+              <div>
+                <h3 class="tituloFooter">Siguenos</h3>
+              </div>
+              <div class="row">
+                <div class="col-1 col-md-2 col-lg-2">
+                  <a href="https://github.com/nasa/nasa.github.io/blob/master/docs/INSTRUCTIONS.md"><img class="socialUno"
+                      src="/img/git.png" alt="github"></a>
+                </div>
+                <div class="col-1  col-md-2 col-lg-2">
+                  <a href="https://www.instagram.com/nasaearth/"><img class="socialDos" src="/img/instagram.png" alt="instagram"></a>
+                </div>
+                <div class="col-1 col-md-2 col-lg-2">
+                  <a href="https://www.facebook.com/nasaearth?mibextid=ZbWKwL"><img class="socialTres" src="/img/facebook.png"
+                      alt="facebook"></a>
+                </div>
+                <div class="col-1 col-md-2 col-lg-2">
+                  <a href="https://twitter.com/NASAEarth?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img
+                      class="socialCuatro" src="/img/twitter.png" alt="twitter"></a>
+                </div>
+                <div class="col-1 col-md-2 col-lg-2">
+                  <a href="https://www.linkedin.com/company/nasa/"><img class="socialCinco" src="/img/linkedin.png" alt="linkedin"></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-2 col-lg-2 mt-2">
+              <h3 class="tituloFooter">Aplicación</h3>
+              <div class="col-lg-12">
+                <a href="https://play.google.com/store/apps/details?id=gov.nasa"><img class="play" src="/img/googlePlay.png"alt="googlePlay"></a>
+            </div>
+          </div>
+          <div class="col-12 col-md-3 col-lg-3 mt-2">
+            <h3 class="tituloFooter">Oficina de información</h3>
+                <div class="row">
+                  <div class="col-12 col-md-12 col-lg-12">
+                    <img class="socialSeis" src="/img/Gmail.png" alt="Gmail">
+                    <a class="mail" href=mailto:nasa-data@lists.arc.nasa.gov>nasa-data@lists.arc.nasa.gov</a>
+                  </div>
+                </div>
+          </div>
+          <div class="col-12 col-md-2 col-lg-3 mt-2">
+            <h3 class="tituloFooter">Nosotros</h3>
+                <div class="row">
+                  <div class=" col-md-12 col-lg-12">
+                    <img class="socialSiete" src="/img/coffee.png" alt="Gmail">
+                    <a class="nosotros" href="#">Equipo Cafe y Práctica</a>
+                  </div>
+                </div>
+          </div>
+          <div class="col-lg-12">
+            <div class="col-md-12 col-lg-12 text-center">
+              <h6 class="tituloCopy">&copy;Copyright - 2023</h6>
+            </div>
+          </div>
+        </div>
+      </Section>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script>
       // Example starter JavaScript for disabling form submissions if there are invalid fields
