--- a/html/contacto.html
+++ b/html/contacto.html
@@ -41,68 +41,29 @@
     <main>
       <h1 class="titulo animate__animated animate__bounce colorh1 text-black fw-bold">Contactos</h1>
         <section>
-            <div class="card-group">
-                <div class="card cardcss">
-                  <img src="/img/administrador.jpg" class="card-img-top foto" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Administrador</h5>
-                    <div class="col-md-3 col-lg-2 mt-2">
-                        <div class="row">
-                          <div class="col-1  col-md-2 col-lg-2">
-                            <a href="https://www.instagram.com/nasaearth/"><img class="socialDos" src="/img/instagram.png" alt="instagram"></a>
-                          </div>
-                          <div class="col-1 col-md-2 col-lg-2">
-                            <a href="https://www.facebook.com/nasaearth?mibextid=ZbWKwL"><img class="socialTres" src="/img/facebook.png"
-                                alt="facebook"></a>
-                          </div>
-                          <div class="col-1 col-md-2 col-lg-2">
-                            <a href="https://twitter.com/NASAEarth?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img
-                                class="socialCuatro" src="/img/twitter.png" alt="twitter"></a>
-                          </div>
-                        </div>
-                      </div>
-                  </div>
+            <div class="card-group justify-content-center">
+             <div class="col-lg-2 text-center">
+              <div class="card cardcss">
+                <img src="/img/administrador.jpg" class="foto" alt="colaborador">
+                <div class="card-body">
+                  <h5 class="card-title">Administrador</h5>
                 </div>
-                <div class="card cardcss">
-                  <img src="/img/col2.jpg" class="card-img-top foto" width="100px" alt="...">
+              </div>
+             </div>
+              <div  class="col-lg-2 text-center">
+                <div class="card cardcss text-center">
+                  <img src="/img/col2.jpg" class="foto"  alt="colaborador">
                   <div class="card-body">
                     <h5 class="card-title">Colaborador</h5>
-                    <div class="col-md-3 col-lg-2 mt-2">
-                        <div class="row">
-                          <div class="col-1  col-md-2 col-lg-2">
-                            <a href="https://www.instagram.com/nasaearth/"><img class="socialDos" src="/img/instagram.png" alt="instagram"></a>
-                          </div>
-                          <div class="col-1 col-md-2 col-lg-2">
-                            <a href="https://www.facebook.com/nasaearth?mibextid=ZbWKwL"><img class="socialTres" src="/img/facebook.png"
-                                alt="facebook"></a>
-                          </div>
-                          <div class="col-1 col-md-2 col-lg-2">
-                            <a href="https://twitter.com/NASAEarth?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img
-                                class="socialCuatro" src="/img/twitter.png" alt="twitter"></a>
-                          </div>
-                        </div>
-                      </div>
                   </div>
                 </div>
-                <div class="card cardcss">
-                  <img src="/img/col1.jpg" class="card-img-top foto" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Colaborador</h5>
-                    <div class="col-md-3 col-lg-2 mt-2">
-                        <div class="row">
-                          <div class="col-1  col-md-2 col-lg-2">
-                            <a href="https://www.instagram.com/nasaearth/"><img class="socialDos" src="/img/instagram.png" alt="instagram"></a>
-                          </div>
-                          <div class="col-1 col-md-2 col-lg-2">
-                            <a href="https://www.facebook.com/nasaearth?mibextid=ZbWKwL"><img class="socialTres" src="/img/facebook.png"
-                                alt="facebook"></a>
-                          </div>
-                          <div class="col-1 col-md-2 col-lg-2">
-                            <a href="https://twitter.com/NASAEarth?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img
-                                class="socialCuatro" src="/img/twitter.png" alt="twitter"></a>
-                          </div>
-                        </div>
-                      </div>
+              </div>
+                <div  class="col-lg-2 text-center">
+                  <div class="card cardcss">
+                    <img src="/img/col1.jpg" class="foto" alt="colaborador">
+                    <div class="card-body">
+                      <h5 class="card-title">Colaborador</h5>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -202,26 +163,3 @@
       </Section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script>
-      // Example starter JavaScript for disabling form submissions if there are invalid fields
-(() => {
-  'use strict'
-
-  // Fetch all the forms we want to apply custom Bootstrap validation styles to
-  const forms = document.querySelectorAll('.needs-validation')
-
-  // Loop over them and prevent submission
-  Array.from(forms).forEach(form => {
-    form.addEventListener('submit', event => {
-      if (!form.checkValidity()) {
-        event.preventDefault()
-        event.stopPropagation()
-      }
-
-      form.classList.add('was-validated')
-    }, false)
-  })
-})()
-    </script>
-</body>
-</html>
